实现了撤销悔棋功能

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="wrapper-button">
                 <button id="restart">重新开始</button>
                 <button id="backBtn">悔棋</button>
-                <button id="cancelChessBtn">撤销悔棋</button>
+                <button id="revokeBackBtn">撤销悔棋</button>
             </div>
         </div>
     </div>
